# metric-forge

./: .buildinfo  .gitignore  LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  readme.ipynb  search.html  searchindex.js  setup.py
.github/: gh-release-drafter.yml  release-drafter-template.yml
.github/workflows/: release-drafter.yml  release.yml
_sources/: index.md.txt  index.rst.txt
_sources/reference/api/: index.rst.txt
_static/: documentation_options.js
datasets/: customer-aquisition.csv  customer-value-added.csv  customer-value.csv  ecommerce_metrics.csv  web_traffic.csv
docs/: CNAME  index.html  index.rst  requirements-docs.txt
docs/source/: conf.py  index.rst
metric_forge/: __init__.py
metric_forge/ecommerce/: __init__.py  polars_ext.py  single_value_functions.py
metric_forge/finance/: __init__.py  io.py  objects.py  polars_ext.py  single_value_functions.py
metric_forge/human_capital/: __init__.py  polars_ext.py
metric_forge/marketing/: __init__.py  core.py
metric_forge/mortgage/: __init__.py  core.py  objects.py
metric_forge/operations/: __init__.py  polars_ext.py
metric_forge/product_development/: __init__.py  core.py  polars_ext.py  single_value_functions.py
metric_forge/web_traffic/: __init__.py  polars_ext.py  single_value_functions.py
notebooks/: ecommerce.ipynb  finance.ipynb  mortgage.ipynb  operations.ipynb  product_dev.ipynb  web_traffic.ipynb
reference/: io.html
reference/api/: index.html  io.html
reference/api/finance/: index.html
reference/getting_started/: index.html
(+91 files in other folders)
